# webcrown

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  conanfile.txt
.cache/clangd/index/: Entrypoint.cpp.3D5DB8E025012D68.idx  address.hpp.1795F94F8637A95D.idx  address.hpp.251D4CFF55F6786E.idx  address.ipp.A6EEE21B73E0DD8F.idx  address_v4.hpp.3F5E817BC538BC73.idx  address_v4.hpp.676F4684A8B6DB7D.idx  address_v4.ipp.6C4EA8F9A988ACC4.idx  address_v4_iterator.hpp.064CA769BDBE8899.idx  address_v4_range.hpp.369EE38D0825A2F8.idx  address_v6.hpp.4CF78AAC165A12F7.idx  address_v6.hpp.91FD6B31D8E92BA0.idx  address_v6.ipp.2DAD3A11AE7FA718.idx  address_v6_iterator.hpp.1AB2062746980994.idx  address_v6_range.hpp.2DE52EB65C5F82D5.idx  allocator.hpp.26539FD62E99F5C1.idx  ansicolor_sink-inl.h.5B578E65F3D46133.idx  ansicolor_sink.h.5237D6A93CD3D5C2.idx  any_executor.hpp.47776138E4F4C7AE.idx  any_io_executor.hpp.FE3E0F66249BB06D.idx  array.hpp.C1F008DA4DECBF2F.idx  array_fwd.hpp.7A4B61CE144CF7E4.idx  as_invocable.hpp.10D6B2336847EB98.idx  as_operation.hpp.D7239E90094B8880.idx  as_receiver.hpp.F93CB68E3DCD1772.idx  asio.hpp.7173BB85492D10C9.idx  assert.hpp.172E198825A29771.idx  associated_allocator.hpp.59EA710CB674580E.idx  associated_executor.hpp.E01A1C2EF11176C1.idx  async.cpp.01FC61C39435310A.idx  async.h.9CAFE6EC4A30FF30.idx  async_logger-inl.h.FA85EFA76E3CD468.idx  async_logger.h.60798EB8AEDE108E.idx  async_result.hpp.F34B921E4A2ADD62.idx  atomic_count.hpp.7E7D262C628297E1.idx  awaitable.hpp.8B58D9EE16E78F63.idx  backtracer-inl.h.FF557C160752EE07.idx  backtracer.h.B9B5E3F89C729D16.idx  bad_address_cast.hpp.3895252CC43C2929.idx  bad_executor.hpp.7EE33FB7F39C0A2B.idx  bad_executor.ipp.013C21622AD6C7A9.idx  (+522 more)
Tools/: ca-secret.key  ca.crt  ca.key  ca.pem  ca.pfx  dh4096.pem  generate_certificate.sh  server-secret.key  server.crt  server.csr  server.key  server.pem  server.pfx
Tools/admin/: CMakeLists.txt
Tools/admin/front_static/: index.html
Tools/admin/include/: admin_config.hpp
Tools/admin/include/gui/: ColorsContants.hpp  Context.hpp  GuiConfig.hpp  View.hpp
Tools/admin/include/imgui/implot/: implot.h
Tools/admin/include/imgui/impls/: imgui_freetype.cpp_nouse  imgui_freetype.h_no_use
Tools/admin/source/: Context.cpp  View.cpp  admin_config.cpp  webcrown_admin.cpp
Tools/admin/source/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  implot.cpp  implot_demo.cpp
Tools/cert/: ca-secret.key  ca.crt  ca.pfx  dh4096.pem  server.crt  server.csr  server.key
cmake/: C2aModules.cmake
examples/api_admin/: CMakeLists.txt
examples/api_admin/src/: entrypoint.cpp
examples/authentication/: CMakeLists.txt  authentication_middleware.cpp
examples/multiple_buffers_receive/: CMakeLists.txt  entrypoint.cpp
examples/orm/: CMakeLists.txt  entrypoint.cpp
examples/simple_api/: CMakeLists.txt  simple_api.cpp
examples/simple_route/: CMakeLists.txt  entrypoint.cpp
include/webcrown/: definitions.hpp  error.hpp  webcrown.hpp
include/webcrown/admin/: adm_structs.hpp  admin.hpp  user_model.hpp
include/webcrown/common/: url_parser.hpp
include/webcrown/common/date/: date_time.hpp
include/webcrown/common/impl/: string.cpp  string_common.cpp
include/webcrown/common/meta/: to_string.hpp
include/webcrown/common/serializator/: serializator.hpp
include/webcrown/common/string/: string.hpp  string_common.hpp
include/webcrown/common/time/: time.hpp
include/webcrown/helpers/: endpoint_context.hpp
include/webcrown/logger/: webcrown_logger.hpp
include/webcrown/orm/: orm.hpp
include/webcrown/orm/databases/postgres/: enums.hpp  postgres.hpp
include/webcrown/security/: password_hashing.cpp  password_hashing.hpp
include/webcrown/serializer/: serializator.hpp
include/webcrown/server/: error.hpp  server.hpp  service.hpp  session.hpp  webserver.hpp
include/webcrown/server/http/: enums.hpp  error.hpp  error.inl  http_method.hpp  http_parser.hpp  http_request.hpp  http_response.hpp  http_server.hpp  http_session.hpp  method.inl  status.hpp
include/webcrown/server/http/detail/: parser.hpp
include/webcrown/server/http/impl/: http_server.cpp  http_session.cpp
include/webcrown/server/http/middlewares/: auth_middleware.hpp  cors_middleware.hpp  http_middleware.hpp  route.hpp  routing_middleware.hpp
include/webcrown/server/impl/: server.cpp  service.cpp  session.cpp  webserver.cpp
src/include/: WebCrown.hpp  webcrown.hpp  webcrown_http.hpp
src/include/Json/: JsonValue.h
src/include/Server/: HttpsServer.hpp  HttpsSession.hpp  Server.hpp  Service.hpp  Session.hpp  SslServer.hpp  SslSession.hpp
src/include/Server/Http/: HttpContext.hpp  HttpEndpoint.hpp  HttpHeaderParser.hpp  HttpRequest.hpp  HttpServer.hpp  HttpSession.hpp  IController.hpp
src/include/Server/Http/details/: enums.hpp
src/include/common/string/: string.hpp
src/include/server/: asio.h
src/include/webcrown/: error.hpp
src/include/webcrown/server/: server.hpp  service.hpp  session.hpp
src/include/webcrown/server/http/: enums.hpp  error.hpp  http_method.hpp  http_middleware.hpp  http_parser.hpp  http_request.hpp  http_response.hpp  http_server.hpp  http_session.hpp  method.hpp  method.inl  parser.hpp
src/include/webcrown/server/http/detail/: parser.hpp
src/lib/: entrypoint.cpp
src/lib/Server/: HttpRequest.cpp  HttpsServer.cpp  Server.cpp  Service.cpp  Session.cpp  SslServer.cpp  SslSession.cpp
src/lib/Server/Http/: HttpContext.cpp  HttpEndpoint.cpp  HttpRequest.cpp  HttpServer.cpp  HttpSession.cpp
src/lib/webcrown/common/string/: string.cpp
src/lib/webcrown/http/: parser.cpp
src/lib/webcrown/server/: server.cpp  service.cpp  session.cpp
src/lib/webcrown/server/http/: http_server.cpp  http_session.cpp
src/source/: .entrypoint.cpp.swp  entrypoint.cpp
src/source/server/: asio.cpp  handleclient.cpp
tests/: CMakeLists.txt
tests/server/Http/: HttpRequestTests.cpp
tests/server/http/: http_parser.cpp  http_request_tests.cpp  parser.cpp
tests/server/http/middlewares/: route_tests.cpp
tests/server/nosecure/: nosecure_server_tests.cpp
(+20 files in other folders)
